--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "6dbf253f-b6a3-4a77-8798-e45a52897f95"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
