--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.4.0",
+    "@capacitor/core": "^5.7.0",
+    "@capacitor/geolocation": "^5.0.7",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "^5.7.4",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/motion": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
