--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@capacitor/motion": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@types/hammerjs": "^2.0.45",
+    "hammerjs": "^2.0.8",
     "ionicons": "^7.0.0",
     "log-symbols": "^6.0.0",
     "rxjs": "~7.8.0",
